--- a/app/globals.css
+++ b/app/globals.css
@@ -18,16 +18,26 @@
 
 body {
   color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
+  background: linear-gradient(to bottom,
       transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+      rgb(var(--background-end-rgb))) rgb(var(--background-start-rgb));
 }
 
 @layer utilities {
   .text-balance {
     text-wrap: balance;
   }
+}
+
+
+.rounded-background::after {
+  content: '';
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  right: -20px;
+  bottom: -20px;
+  background-color: black;
+  border-radius: 20px 20px 20px 20px;
+  z-index: 0;
 }
